# dcleaner

./: .gitignore  CMakeLists.txt  README.md  build.sh
deletion_list/: entries_to_delete.txt
include/: cli_input_parser.hpp  cli_output_writer.hpp  commands.hpp  commands_result.hpp  logger.hpp
src/: cli_input_parser.cpp  cli_input_parser.hpp  cli_output_writer.cpp  cli_output_writer.hpp  commands.cpp  commands.hpp  commands_output.cpp  commands_output.hpp  dir_blacklist.hpp  dir_whitelist_cache.hpp  dir_whitelist_temp.hpp  files_category_info.hpp  glob_match_check.cpp  glob_match_check.hpp  help_text.hpp  logger.cpp  logger.hpp  main.cpp  summary.hpp
src/deletion_list/: entries_to_delete.txt
tests/: CMakeLists.txt  mock_logger.hpp  setup_mock_fs.hpp
tests/unit/: test_analyze_execute.cpp  test_globs.cpp
